--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@stripe/stripe-js": "^4.9.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
